View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023452 | Open CASCADE | OCCT:Tests | public | 2012-09-28 15:56 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | high | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023452: Couldn't catch results produced by commands "data" and "tpstat" | ||||
Description | Couldn't catch results produced by commands "data" and "tpstat" in tcl (test) scripts | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
The branch CR23452 is ready to be reviewed. |
|
Ok, while I would make it simpler: Message::DefaultMessenger() = new Message::Messenger(new Draw_Printer (theCommands)); |
|
The branch CR23452 is improved, remarks were applied. |
|
Dear BugMaster, Branch CR23452 (and products from GIT master) was compiled on Linux and Windows platforms. There are compilaton errors: Linux: ../../../src/XSDRAW/XSDRAW.cxx: In static member function 'static void XSDRAW::LoadDraw(Draw_Interpretor&)': ../../../src/XSDRAW/XSDRAW.cxx:113: error: expected type-specifier ../../../src/XSDRAW/XSDRAW.cxx:113: error: no match for 'operator=' in 'Message::DefaultMessenger() = (int*)operator new(4u)' ../../../inc/Handle_Message_Messenger.hxx:25: note: candidates are: Handle_Message_Messenger& Handle_Message_Messenger::operator=(const Handle_Message_Messenger&) ../../../inc/Handle_Message_Messenger.hxx:25: note: Handle_Message_Messenger& Handle_Message_Messenger::operator=(const Message_Messenger*) ../../../src/XSDRAW/XSDRAW.cxx:113: error: expected %<;%> make[2]: *** [XSDRAW.lo] Error 1 http://jenkins-test-01.nnov.opencascade.com/user/mnt/my-views/view/CR23452/job/mnt-CR23452-master_build_occt_linux/1/parsed_console/? WNT: 64>..\..\..\src\XSDRAW\XSDRAW.cxx(113) : error C2039: 'Messenger' : is not a member of 'Message' 64> ..\..\..\inc\Message.hxx(51) : see declaration of 'Message' 64>..\..\..\src\XSDRAW\XSDRAW.cxx(113) : error C2061: syntax error : identifier 'Messenger' http://jenkins-test-01.nnov.opencascade.com/user/mnt/my-views/view/CR23452/job/mnt-CR23452-master_build_occt_windows/1/parsed_console/? |
|
The branch CR23452 is improved. |
|
This version is definitely better, please test |
|
Dear BugMaster, Branch CR23452 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: chl 934 E2 H6 H7 H8 Improvements: Not detected Testing cases: Not needed See results in /QADisk/occttests/results/KAS/dev/CR23452-master-products_06102012/lin See reference results in /QADisk/occttests/results/KAS/dev/IR-2012-09-21-master-products_24092012/lin See test cases in /QADisk/occttests/tests/ED Test cases chl 902 F9, xigs 001 A1 A2, xstp 001 A1 will be modified after raising this fix. |
|
In testing cases with regressions chl 934 E2 H6 H7 H8 when XProgress's text and graph modes are ON we get wrong output of commands (sewing, fixshape). There is no progress information during the executing of those commands. |
|
Listed cases are not regressions because they can not give valid results as class Draw_ProgressIndicator puts output messages in the default printer ( by default it set to cout). And output messages from progress indicator can not be found in Draw_Interpretor in the current version. For example test chl 934 E2 is failed on the Open CAASCDE 6.5.3 on Windows 7.0. |
|
Dear gka! Test cases chl 934 E2 H6 H7 H8 are regressions, see comment of ski at 2012-10-11 11:24. When XProgress's text mode is ON and graph mode is OFF we get good output of commands (sewing, fixshape). There is progress information during the executing of those commands. |
|
In the test scripts it is necessary to use only one mode either text mode or graphic mode to output information from Progress Indicator. Please note that on Windows 7.0 in the Open CASCCADE 6.5.3 both modes did not work at the same time. The same way in the current branch test cases chl 934 E2 H6 H7 H8 are not regressions |
2012-12-14 11:37 tester |
tests_correction_23452.tar.gz (3,417 bytes) |
|
Dear BugMaster, Test cases: chl 902 F9 chl 934 E2 H6 H7 H8 xigs 001 A1 A2 xstp 001 A1 bugs iges(003) buc60685 are modified. |
occt: master fa350ff0 2012-12-14 12:51:39
|
0023452: Couldn't catch results produced by commands "data" and "tpstat" Add new printer Improving of duplication of command's output Simplification of removing duplication of command's output Removing of brackets improved version Test correction |
Affected Issues 0023452 |
|
mod - src/Draw/Draw_Printer.cxx | Diff File | ||
mod - src/XSDRAW/XSDRAW.cdl | Diff File | ||
mod - src/XSDRAW/XSDRAW.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-09-28 15:56 |
|
New Issue | |
2012-09-28 15:56 |
|
Assigned To | => ski |
2012-10-03 12:25 |
|
Note Added: 0021630 | |
2012-10-03 12:25 |
|
Status | new => resolved |
2012-10-03 12:25 |
|
Assigned To | ski => abv |
2012-10-03 13:57 |
|
Steps to Reproduce Updated | |
2012-10-03 16:26 |
|
Note Added: 0021641 | |
2012-10-03 16:26 |
|
Assigned To | abv => ski |
2012-10-03 16:26 |
|
Status | resolved => reviewed |
2012-10-03 16:50 |
|
Note Added: 0021642 | |
2012-10-03 18:14 |
|
Assigned To | ski => mkv |
2012-10-04 11:49 |
|
Note Added: 0021652 | |
2012-10-04 11:51 |
|
Assigned To | mkv => ski |
2012-10-04 11:51 |
|
Status | reviewed => assigned |
2012-10-05 16:48 |
|
Note Added: 0021672 | |
2012-10-05 16:48 |
|
Assigned To | ski => abv |
2012-10-05 16:48 |
|
Status | assigned => resolved |
2012-10-05 17:15 |
|
Note Added: 0021673 | |
2012-10-05 17:15 |
|
Assigned To | abv => bugmaster |
2012-10-05 17:15 |
|
Status | resolved => reviewed |
2012-10-05 18:13 |
|
Assigned To | bugmaster => mkv |
2012-10-08 14:53 |
|
Note Added: 0021678 | |
2012-10-08 14:54 |
|
Test case number | => Not needed |
2012-10-08 14:54 |
|
Assigned To | mkv => ski |
2012-10-08 14:54 |
|
Status | reviewed => assigned |
2012-10-11 11:24 |
|
Note Added: 0021717 | |
2012-10-11 11:25 |
|
Assigned To | ski => abv |
2012-10-24 13:28 |
|
Relationship added | related to 0023461 |
2012-10-24 13:28 |
|
Relationship added | related to 0023439 |
2012-10-24 14:51 |
|
Target Version | => 6.5.4 |
2012-11-11 14:46 |
|
Assigned To | abv => gka |
2012-11-11 14:46 |
|
Target Version | 6.5.4 => 6.6.0 |
2012-11-12 13:32 |
|
Note Added: 0022208 | |
2012-11-12 13:34 |
|
Status | assigned => resolved |
2012-11-12 13:34 |
|
Status | resolved => reviewed |
2012-11-13 17:29 |
|
Note Added: 0022230 | |
2012-11-13 17:30 |
|
Status | reviewed => assigned |
2012-12-10 11:13 |
|
Priority | normal => high |
2012-12-11 18:50 |
|
Note Added: 0022658 | |
2012-12-11 18:50 |
|
Status | assigned => resolved |
2012-12-11 18:50 |
|
Status | resolved => reviewed |
2012-12-14 11:37 |
|
File Added: tests_correction_23452.tar.gz | |
2012-12-14 11:37 |
|
Assigned To | gka => mkv |
2012-12-14 11:37 |
|
Note Added: 0022697 | |
2012-12-14 11:38 |
|
Assigned To | mkv => bugmaster |
2012-12-14 11:38 |
|
Status | reviewed => tested |
2012-12-18 10:45 |
|
Changeset attached | => occt master fa350ff0 |
2012-12-18 10:45 |
|
Assigned To | bugmaster => mkv |
2012-12-18 10:45 |
|
Status | tested => verified |
2012-12-18 10:45 |
|
Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |