0023452: Couldn't catch results produced by commands "data" and "tpstat" Add new printer Improving of duplication of command's output Simplification of removing duplication of command's output Removing of brackets improved version Test correction